--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <base href="https://cohab-4fcf8ee594c1.herokuapp.com/frontend">
   </head>
   <body>
     <div id="root"></div>
