--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Cohab.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cohab</title>
     <!-- <base href="https://cohab-4fcf8ee594c1.herokuapp.com/frontend"> -->
